fix(bluebird): z-index with input group resolved

--- a/packages/bluebird/src/bootstrap-sass/overrides/_forms.scss
+++ b/packages/bluebird/src/bootstrap-sass/overrides/_forms.scss
@@ -391,19 +391,21 @@ input[type="checkbox"] {
 //     padding-right: ($input-height-base * 1.25);
 //   }
 // }
-// // Feedback icon (requires .glyphicon classes)
-// .form-control-feedback {
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   z-index: 2; // Ensure icon is above input groups
-//   display: block;
-//   width: $input-height-base;
-//   height: $input-height-base;
-//   line-height: $input-height-base;
-//   text-align: center;
-//   pointer-events: none;
-// }
+
+// Feedback icon (requires .glyphicon classes)
+.form-control-feedback {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  z-index: 3; // Ensure icon is above input groups
+  //   display: block;
+  //   width: $input-height-base;
+  //   height: $input-height-base;
+  //   line-height: $input-height-base;
+  //   text-align: center;
+  //   pointer-events: none;
+}
+
 // .input-lg + .form-control-feedback,
 // .input-group-lg + .form-control-feedback,
 // .form-group-lg .form-control + .form-control-feedback {
